Using ViewChildren to access DOM directly

--- a/ba-web-app/src/index.html
+++ b/ba-web-app/src/index.html
@@ -28,16 +28,17 @@
   <!-- Here goes angular stuff -->
   <app-root></app-root>
   <!-- Bootstrap core JavaScript -->
-  <script src="./assets/includes/jquery/jquery.min.js"></script> 
-  <script src="./assets/includes/bootstrap/js/bootstrap.bundle.min.js"></script> 
-  <!-- Plugin JavaScript --> 
+  <script src="./assets/includes/jquery/jquery.min.js"></script>
+  <script src="./assets/includes/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Plugin JavaScript -->
   <script src="./assets/includes/card/cardscript.js"></script>
-  <script src="./assets/includes/jquery-easing/jquery.easing.min.js"></script> 
-  <script src="./assets/includes/scrollreveal/scrollreveal.min.js"></script> 
+  <script src="./assets/includes/jquery-easing/jquery.easing.min.js"></script>
+  <script src="./assets/includes/scrollreveal/scrollreveal.min.js"></script>
   <script src="./assets/includes/magnific-popup/jquery.magnific-popup.min.js"></script>
   <!--Google sign in libraries -->
   <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
-  <!-- Custom scripts for this template --> 
+  <script src="http://code.angularjs.org/1.2.9/angular.min.js"></script>
+  <!-- Custom scripts for this template -->
   <!-- <script src="./assets/js/bastyle.min.js"></script>  -->
 
 </body>
