Videogular player properly works and displays inputs

--- a/ba-web-app/src/index.html
+++ b/ba-web-app/src/index.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" href="./assets/includes/css/carousel.css">
 <link href="./assets/includes/css/bastyle.min.css" rel="stylesheet">
 <link rel="stylesheet" href="./assets/includes/card/cardcss.css">
+<link rel="stylesheet" type="text/css" href="./assets/includes/css/fonts/videogular.css">
 </head>
 
 <body>
